emphasized issue for border on mobile, defect 438

--- a/node-app/src/views/core/components/content/container/style.scss
+++ b/node-app/src/views/core/components/content/container/style.scss
@@ -930,7 +930,7 @@ ul {
             }
             &:not(:first-child){        // Removes border in mobile view
                 margin-top: 14px;
-                border: none;           
+                border: none !important;           
             }
         } 
         .container-seperator-75:after {            /* Horizontal seperator for mobile view  */
